Guestbook/Ingress/production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
       - backend:
           serviceName: frontend
           servicePort: 80
